@@ -4,6 +4,7 @@ next:
          - update windows exporter to 0.29.1
          - wmi: always set en_US language in query (#156)
          - check_eventlog: fix time offset parsing (#157)
+         - add /api/v1/inventory/{module} rest endpoint to get specific inventory
 
 0.27     Mon Sep  2 19:31:14 CEST 2024
          - do not use empty-state if warn/crit conditions contain check on 'count'
